<resources>

    <string name="app_name">Volunteer Book</string>

    <!--header-->
    <string name="app_login">Добро пожаловать!</string>
    <string name="app_profile">Профиль</string>
    <string name="app_event">Список мероприятий</string>
    <string name="app_event_show">О мероприятии</string>
    <string name="app_organizer">Организатор</string>
    <string name="app_request">Заявки</string>
    <string name="app_registration">Регистрация</string>

    <!--explanation-->
    <string name="exp_greeting">Вы вошли как:</string>
    <string name="exp_organizer_list">Мои мероприятия:</string>
    <string name="exp_request_event_participant">Люди подавшие заявку</string>
    <string name="exp_request_event_user">Профиль волонтёра</string>

    <!--close-->
    <string name="close">Здесь что-то</string>

    <!--login_account-->
    <string name="app_enter">Войти</string>
    <string name="app_register">Зарегистрироваться</string>
    <string name="app_email">Почта</string>
    <string name="app_password">Пароль</string>
    <string name="app_status_info">Статус волонтёра</string>

    <!--registration_for_the_event-->
    <string name="app_check_events_1">Мероприятие</string>
    <string name="app_check_events_2">№2724788</string>

    <!--organizer_create-->
    <string name="app_organizer_create">Создание мероприятия</string>

    <!--show_organizer_event-->
    <string name="app_show_organizer_event">Управление мероприятием</string>

    <!--my_events_list-->
    <string name="app_my_events_list">Мои события</string>

    <!--my_events-->
    <string name="app_my_events_1">Мероприятие</string>
    <string name="app_my_events_2">№2724788</string>

    <!--request-->
    <string name="app_request_toggle1">Новые\nучастники</string>
    <string name="app_request_toggle2">Заявки на\nмероприятия</string>
    <string name="app_request_user">Данные пользователя</string>
    <string name="app_request_user_create">Добавить пользователя</string>
    <string name="app_request_event">Заявки волонтёров</string>
    <string name="app_request_event_name">Название\nмероприятия</string>
    <string name="app_request_event_direction">Направление</string>
    <string name="app_request_event_data">Дата/время</string>
    <string name="app_request_event_quantity">Количество\nучастников</string>
    <string name="app_request_event_description">Описание</string>
    <string name="app_request_event_participant">Люди подавшие\nзаявку</string>
    <string name="app_request_event_uhello">Профиль волонтёра</string>
    <string name="app_request_event_usname">Фамилия/Имя</string>
    <string name="app_request_event_udata">Дата рождения</string>
    <string name="app_request_event_upost">Должность</string>
    <string name="app_request_event_uemail">Почта</string>
    <string name="app_request_event_ucheck1">Принять заявку</string>
    <string name="app_request_event_ucheck2">Отказать в заявке</string>

    <!--user_data-->
    <string name="app_user_data_name">Имя</string>
    <string name="app_user_data_secname">Фамилия</string>
    <string name="app_user_data_data">Дата рождения</string>
    <string name="app_user_data_email">Почта</string>
    <string name="app_user_data_post">Должность</string>

    <!--direction-->
    <string-array name="direction">
        <item>Социальное</item>
        <item>Экологическое</item>
        <item>Культурное</item>
        <item>Спортивное</item>
        <item>Патриотическое</item>
        <item>Корпоративное</item>
        <item>Медиаволонтёрство</item>
        <item>Зооволонтёрство</item>
    </string-array>

    <!--post-->
    <string-array name="post">
        <item>Студент</item>
        <item>Вожатый</item>
    </string-array>

    <!--point-->
    <string-array name="point">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
    </string-array>

</resources>