<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.EventRequestActivity">

    <TextView
        android:id="@+id/text_header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:padding="9sp"
        android:text="@string/app_request_event"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:hapticFeedbackEnabled="false"
        android:onClick="onClickUserRequestExit"
        android:scaleType="centerInside"
        android:soundEffectsEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_arrow_left_solid" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_request_event_name"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvEvName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_request_event_direction"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvDirection"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/tvEvDirection" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_request_event_data"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvData"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/tvEvData" />

    <ListView
        android:id="@+id/lvParticipant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_request_event_participant"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvDescription" />

    <TextView
        android:id="@+id/tvEvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header2" />

    <TextView
        android:id="@+id/tvEvDirection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvEvName"
        app:layout_constraintStart_toStartOf="@+id/tvEvName"
        app:layout_constraintTop_toBottomOf="@+id/tvEvName" />

    <TextView
        android:id="@+id/tvEvData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvEvDirection"
        app:layout_constraintStart_toStartOf="@+id/tvEvDirection"
        app:layout_constraintTop_toBottomOf="@+id/tvEvDirection" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_request_event_description"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvDescription"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/tvEvDescription" />

    <TextView
        android:id="@+id/tvEvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvEvData"
        app:layout_constraintStart_toStartOf="@+id/tvEvData"
        app:layout_constraintTop_toBottomOf="@+id/tvEvQuantity" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_request_event_quantity"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvQuantity"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/tvEvQuantity" />

    <TextView
        android:id="@+id/tvEvQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tvEvData"
        app:layout_constraintStart_toStartOf="@+id/tvEvData"
        app:layout_constraintTop_toBottomOf="@+id/tvEvData" />

</androidx.constraintlayout.widget.ConstraintLayout>